added inifinity div

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <div id="container">
+    <div class="col" id="container">
         <div id="row-1">
             <div id=header>
-                <div class="col-1" id="logo">
+                <div class="col col-1" id="logo">
                     <img src="assets/logo.png">
-                    <div class="col-6" id="nav">
+                    <div class="col col-6" id="nav">
                         <ul>
                             <li><a href="">Home</a></li>
                             <li><a href="">Our Work</a></li>
@@ -24,7 +24,7 @@
                             <li><a href="">Blog</a></li>
                             <li><a href="">Get in Touch</a></li>
                         </ul>
-                        <div class="col-3" id="icons">
+                        <div class="col col-3" id="icons">
                             <ul>
                                 <li> <i class="fa fa-facebook"></i></li>
 
@@ -44,6 +44,23 @@
                     <br> enterprise solutions, corporate identity and advertisement.</p>
                 <button type="button" value="Explore more">EXPLORE MORE</button>
             </div>
+        </div>
+        <div id="row-2">
+            <div class="col col-6">
+                <div id="highlighted-left">
+                    <div id="projects">
+
+                    </div>
+                    <div id="blank">
+
+                    </div>
+                </div>
+                <div id="highlighted-right">
+
+                </div>
+
+            </div>
+
         </div>
     </div>
 </body>
