--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="col col-6">
                 <div id="highlighted-left">
                     <div id="projects">
-
+                        <p>Current site section contains general information about ouur latest projects. We are focusing on website and mobile development, UI/UX nad branding</p>
                     </div>
                     <div id="blank">
 
