--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
                 <div id="highlighted-left">
                     <div id="projects">
                         <p>Current site section contains general information about ouur latest projects. We are focusing on website and mobile development, UI/UX nad branding</p>
+                        <br>
+                        <h1>HIGHLIGHTED PROJECTS</h1>
                     </div>
                     <div id="blank">
 
+                    </div>
+                    <div id="discover">
+                        <button type="button" value="discover">DISCOVER MORE</button>
                     </div>
                 </div>
                 <div id="highlighted-right">
