--- a/index.html
+++ b/index.html
@@ -54,16 +54,29 @@
                         <h1>HIGHLIGHTED PROJECTS</h1>
                     </div>
                     <div id="blank">
-
+                        <div class="col col-2">
+                        </div>
+                        <div class="col col-2">
+                        </div>
+                        <div class="col col-2">
+                        </div>
                     </div>
                     <div id="discover">
                         <button type="button" value="discover">DISCOVER MORE</button>
                     </div>
                 </div>
-                <div id="highlighted-right">
-
+                <div class="col col-6">
+                    <div id="highlighted-right">
+                        <div id="text">
+                            <h2>FEATURED</h2>
+                            <h1>I N F I N I T Y  S P A C E S </h1>
+                            <p>
+                                Our self-initiated project.
+                                <br> Infinity is an abstract concept describing something without any limiit and is relevant in a number of fields.
+                            </p>
+                        </div>
+                    </div>
                 </div>
-
             </div>
 
         </div>
