--- a/index.html
+++ b/index.html
@@ -53,23 +53,16 @@
                         <br>
                         <h1>HIGHLIGHTED PROJECTS</h1>
                     </div>
-                    <div id="blank">
-                        <div class="col col-2">
-                        </div>
-                        <div class="col col-2">
-                        </div>
-                        <div class="col col-2">
-                        </div>
-                    </div>
+
                     <div id="discover">
-                        <button type="button" value="discover">DISCOVER MORE</button>
+                        <button id="button" type="button" value="discover">DISCOVER MORE</button>
                     </div>
                 </div>
                 <div class="col col-6">
                     <div id="highlighted-right">
                         <div id="text">
                             <h2>FEATURED</h2>
-                            <h1>I N F I N I T Y  S P A C E S </h1>
+                            <h1>I N F I N I T Y   S P A C E S </h1>
                             <p>
                                 Our self-initiated project.
                                 <br> Infinity is an abstract concept describing something without any limiit and is relevant in a number of fields.
