--- a/index.html
+++ b/index.html
@@ -10,69 +10,79 @@
 </head>
 
 <body>
-    <div class="col" id="container">
-        <div id="row-1">
-            <div id=header>
-                <div class="col col-1" id="logo">
-                    <img src="assets/logo.png">
-                    <div class="col col-6" id="nav">
-                        <ul>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Our Work</a></li>
-                            <li><a href="">About</a></li>
-                            <li><a href="">Services</a></li>
-                            <li><a href="">Blog</a></li>
-                            <li><a href="">Get in Touch</a></li>
-                        </ul>
-                        <div class="col col-3" id="icons">
-                            <ul>
-                                <li> <i class="fa fa-facebook"></i></li>
+    <div id=header>
+        <div class="col col-1" id="logo">
+            <img src="assets/logo.png">
+            <div class="col col-6" id="nav">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Our Work</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Get in Touch</a></li>
+                </ul>
+                <div class="col col-3" id="icons">
+                    <ul>
+                        <li> <i class="fa fa-facebook"></i></li>
 
-                                <li> <i class="fa fa-twitter"></i></li>
-                                <li><i class="fa fa-google-plus"></i>
-                                </li>
-                                <li><i class="fa fa-pinterest"></i>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+                        <li> <i class="fa fa-twitter"></i></li>
+                        <li><i class="fa fa-google-plus"></i>
+                        </li>
+                        <li><i class="fa fa-pinterest"></i>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div id="title">
-                <h1>WE BUILD WEBSITES AND <br>APPS THAT PEOPLE LOVE</h1>
-                <p>Full suite of internet services in the areas of website development,web-based
-                    <br> enterprise solutions, corporate identity and advertisement.</p>
-                <button type="button" value="Explore more">EXPLORE MORE</button>
-            </div>
         </div>
-        <div id="row-2">
+    </div>
+    <div class="row">
+        <div id="title">
+            <h1>WE BUILD WEBSITES AND <br>APPS THAT PEOPLE LOVE</h1>
+            <p>Full suite of internet services in the areas of website development,web-based
+                <br> enterprise solutions, corporate identity and advertisement.</p>
+            <button type="button" value="Explore more">EXPLORE MORE</button>
+        </div>
+    </div>
+    <div id="row">
+        <div class="col col-6">
+            <div id="highlighted-left">
+                <div id="projects">
+                    <p>Current site section contains general information about ouur latest projects. We are focusing on website and mobile development, UI/UX nad branding</p>
+                    <br>
+                    <h1>HIGHLIGHTED PROJECTS</h1>
+                </div>
+
+                <div id="discover">
+                    <button id="button" type="button" value="discover">DISCOVER MORE</button>
+                </div>
+            </div>
             <div class="col col-6">
-                <div id="highlighted-left">
-                    <div id="projects">
-                        <p>Current site section contains general information about ouur latest projects. We are focusing on website and mobile development, UI/UX nad branding</p>
-                        <br>
-                        <h1>HIGHLIGHTED PROJECTS</h1>
-                    </div>
-
-                    <div id="discover">
-                        <button id="button" type="button" value="discover">DISCOVER MORE</button>
-                    </div>
-                </div>
-                <div class="col col-6">
-                    <div id="highlighted-right">
-                        <div id="text">
-                            <h2>FEATURED</h2>
-                            <h1>I N F I N I T Y   S P A C E S </h1>
-                            <p>
-                                Our self-initiated project.
-                                <br> Infinity is an abstract concept describing something without any limiit and is relevant in a number of fields.
-                            </p>
-                        </div>
+                <div id="highlighted-right">
+                    <div id="text">
+                        <h2>FEATURED</h2>
+                        <h1>I N F I N I T Y   S P A C E S </h1>
+                        <p>
+                            Our self-initiated project.
+                            <br> Infinity is an abstract concept describing something without any limiit and is relevant in a number of fields.
+                        </p>
                     </div>
                 </div>
             </div>
-
         </div>
+
+    </div>
+    <div class="row">
+        <div class="large-6" id="history">
+            <h2>OUR HISTORY</h2>
+            <p>SAGE -- is the flexible muti-concept portfolio theme based on WordPress. Built by designers, creative agencies and studios.
+                <br> Multi-purpose appreviate it's Anti mega industry multi-purpose are brighter. Also longer successful classic deal etra vibrant first exclusive. And spaciou ultimate secure lasting clinically fli gigantic every outside.
+                <br> Genuine less effective stimulates effervescent jumbo mouthwatering hello class rich however expensive. EEasy Mothers can't try finest gentle spring admire dry. Quenches valuable tangy buy will your scape gron millions on op-top. Waxy included sharpest aroma recommended all can pleasure. However all-over hurry hit than how. Luscious magically colossial whopping it;s full-bodied lasting splash don't get more. Sure zippy on flaoured luscious spring only.
+                <br> Racy challenge listen bettre go light tasting aromatic thick. THink touch spring now jumbo secret deserve thank-you seeing out. Supreme luscious agree monster economical makes deliver tummy absorbent incredible can quick. Clean shine product sweet choosy need golden </p>
+
+            <a href="#features" class="button">Learn MOre</a>
+        </div>
+
     </div>
 </body>
 
