--- a/index.html
+++ b/index.html
@@ -70,19 +70,21 @@
                 </div>
             </div>
         </div>
-
     </div>
     <div class="row">
-        <div class="large-6" id="history">
+        <div class="col col-6" id="history">
             <h2>OUR HISTORY</h2>
             <p>SAGE -- is the flexible muti-concept portfolio theme based on WordPress. Built by designers, creative agencies and studios.
                 <br> Multi-purpose appreviate it's Anti mega industry multi-purpose are brighter. Also longer successful classic deal etra vibrant first exclusive. And spaciou ultimate secure lasting clinically fli gigantic every outside.
                 <br> Genuine less effective stimulates effervescent jumbo mouthwatering hello class rich however expensive. EEasy Mothers can't try finest gentle spring admire dry. Quenches valuable tangy buy will your scape gron millions on op-top. Waxy included sharpest aroma recommended all can pleasure. However all-over hurry hit than how. Luscious magically colossial whopping it;s full-bodied lasting splash don't get more. Sure zippy on flaoured luscious spring only.
                 <br> Racy challenge listen bettre go light tasting aromatic thick. THink touch spring now jumbo secret deserve thank-you seeing out. Supreme luscious agree monster economical makes deliver tummy absorbent incredible can quick. Clean shine product sweet choosy need golden </p>
 
-            <a href="#features" class="button">Learn MOre</a>
+            <a href="#" class="button">Learn More</a>
         </div>
+        <div class="large-6" id="sage">
 
+
+        </div>
     </div>
 </body>
 
