--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
             <a href="#" class="button">Learn More</a>
         </div>
         <div class="large-6" id="sage">
-
-
+            <img src="assets/sageBlackBigLogo.png">
         </div>
     </div>
 </body>
