final edits on nav

--- a/index.html
+++ b/index.html
@@ -10,28 +10,30 @@
 </head>
 
 <body>
-    <div id=header>
-        <div class="col col-1" id="logo">
-            <img src="assets/logo.png">
-            <div class="col col-6" id="nav">
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Our Work</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Get in Touch</a></li>
-                </ul>
-                <div class="col col-3" id="icons">
+    <div class="row">
+        <div id=header>
+            <div class="col col-1" id="logo">
+                <img src="assets/logo.png">
+                <div class="col col-6" id="nav">
                     <ul>
-                        <li> <i class="fa fa-facebook"></i></li>
-
-                        <li> <i class="fa fa-twitter"></i></li>
-                        <li><i class="fa fa-google-plus"></i>
-                        </li>
-                        <li><i class="fa fa-pinterest"></i>
-                        </li>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Our Work</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Get in Touch</a></li>
                     </ul>
+                    <div class="col col-3" id="icons">
+                        <ul>
+                            <li> <i class="fa fa-facebook"></i></li>
+
+                            <li> <i class="fa fa-twitter"></i></li>
+                            <li><i class="fa fa-google-plus"></i>
+                            </li>
+                            <li><i class="fa fa-pinterest"></i>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -83,6 +85,11 @@
         </div>
         <div class="large-6" id="sage">
             <img src="assets/sageBlackBigLogo.png">
+        </div>
+        <div class="row large-up-4">
+            <div class="columns">
+                <img src="assets/2180.png">
+            </div>
         </div>
     </div>
 </body>
