highlighted projects row

--- a/index.html
+++ b/index.html
@@ -49,27 +49,41 @@
     <div id="row">
         <div class="col col-6">
             <div id="highlighted-left">
-                <div id="projects">
-                    <p>Current site section contains general information about ouur latest projects. We are focusing on website and mobile development, UI/UX nad branding</p>
-                    <br>
-                    <h1>HIGHLIGHTED PROJECTS</h1>
+                <div class="row" id="projects">
+                    <p>Current site section contains general information about
+                        <br> our latest projects. We are focusing on website and mobile
+                        <br>development, UI/UX nad branding</p>
+                    <h2>HIGHLIGHTED PROJECTS</h2>
                 </div>
+                <div class="row" id="blank">
+                    <div class="col col-4" id="gray1">
 
-                <div id="discover">
-                    <button id="button" type="button" value="discover">DISCOVER MORE</button>
-                </div>
-            </div>
-            <div class="col col-6">
-                <div id="highlighted-right">
-                    <div id="text">
-                        <h2>FEATURED</h2>
-                        <h1>I N F I N I T Y   S P A C E S </h1>
-                        <p>
-                            Our self-initiated project.
-                            <br> Infinity is an abstract concept describing something without any limiit and is relevant in a number of fields.
-                        </p>
+                    </div>
+                    <div class="col col-4" id="gray2">
+
+
+                    </div>
+                    <div class="col col-4" id="grey1">
+
                     </div>
                 </div>
+                <div class="row">
+                    <div id="discover">
+                        <button id="button" type="button" value="discover">DISCOVER MORE</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col col-6">
+        <div id="highlighted-right">
+            <div id="text">
+                <h2>FEATURED</h2>
+                <h1>I N F I N I T Y   S P A C E S </h1>
+                <p>
+                    Our self-initiated project.
+                    <br> Infinity is an abstract concept describing something without any limiit and is relevant in a number of fields.
+                </p>
             </div>
         </div>
     </div>
@@ -83,12 +97,24 @@
 
             <a href="#" class="button">Learn More</a>
         </div>
-        <div class="large-6" id="sage">
+        <div class="col col-6" id="sage">
             <img src="assets/sageBlackBigLogo.png">
         </div>
-        <div class="row large-up-4">
-            <div class="columns">
+        <div class="row" class="col col-6" id="2180">
+            <div class="col col-2 columns">
                 <img src="assets/2180.png">
+                <br> 2 1 8 0
+                <br> Finished Projects
+            </div>
+            <div class="col col-2">
+                <img src="assets/2180.png">
+                <br> 2 1 8 0
+                <br> Finished Projects
+            </div>
+            <div class="col col-2">
+                <img src="assets/2180.png">
+                <br> 2 1 8 0
+                <br> Finished Projects
             </div>
         </div>
     </div>
