--- a/index.html
+++ b/index.html
@@ -46,48 +46,52 @@
             <button type="button" value="Explore more">EXPLORE MORE</button>
         </div>
     </div>
-    <div id="row">
+    <div id="row-2">
+        <div class="col col-12">
+            <div class="col col-6">
+
+                <div id="highlighted-left">
+                    <div class="row" id="projects">
+                        <p>Current site section contains general information about
+                            <br> our latest projects. We are focusing on website and mobile
+                            <br>development, UI/UX nad branding</p>
+                        <h2>HIGHLIGHTED PROJECTS</h2>
+                    </div>
+                    <div class="row" id="blank">
+                        <div class="col col-4" id="gray1">
+
+                        </div>
+                        <div class="col col-4" id="gray2">
+
+
+                        </div>
+                        <div class="col col-4" id="grey1">
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div id="discover">
+                            <button id="button" type="button" value="discover">DISCOVER MORE</button>
+                            <p>* Site contains recent projects. Detailed portfolio available upon request.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="col col-6">
-            <div id="highlighted-left">
-                <div class="row" id="projects">
-                    <p>Current site section contains general information about
-                        <br> our latest projects. We are focusing on website and mobile
-                        <br>development, UI/UX nad branding</p>
-                    <h2>HIGHLIGHTED PROJECTS</h2>
-                </div>
-                <div class="row" id="blank">
-                    <div class="col col-4" id="gray1">
-
-                    </div>
-                    <div class="col col-4" id="gray2">
-
-
-                    </div>
-                    <div class="col col-4" id="grey1">
-
-                    </div>
-                </div>
-                <div class="row">
-                    <div id="discover">
-                        <button id="button" type="button" value="discover">DISCOVER MORE</button>
-                    </div>
+            <div id="highlighted-right">
+                <div id="text">
+                    <h2>FEATURED</h2>
+                    <h1>I N F I N I T Y   S P A C E S </h1>
+                    <p>
+                        Our self-initiated project.
+                        <br> Infinity is an abstract concept describing something without any limiit and is relevant in a number of fields.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col col-6">
-        <div id="highlighted-right">
-            <div id="text">
-                <h2>FEATURED</h2>
-                <h1>I N F I N I T Y   S P A C E S </h1>
-                <p>
-                    Our self-initiated project.
-                    <br> Infinity is an abstract concept describing something without any limiit and is relevant in a number of fields.
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="row">
+    <div class="row-3">
         <div class="col col-6" id="history">
             <h2>OUR HISTORY</h2>
             <p>SAGE -- is the flexible muti-concept portfolio theme based on WordPress. Built by designers, creative agencies and studios.
