changed button style

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <br>
                 <br> Racy challenge listen bettre go light tasting aromatic thick. THink touch spring now jumbo secret deserve thank-you seeing out. Supreme luscious agree monster economical makes deliver tummy absorbent incredible can quick. Clean shine product sweet choosy need golden </p>
 
-            <a href="#" class="button">Learn More</a>
+            <a href="#" class="button">Explore More</a>
         </div>
         <div class="col col-6" id="sage">
             <img src="assets/sageBlackBigLogo.png">
