--- a/index.html
+++ b/index.html
@@ -10,37 +10,36 @@
 </head>
 
 <body>
-    <div class="row container small-12 columns">
+    <div class="row container small-12 large-12 columns">
         <div class="row">
             <div id=header>
-                <div class="small-3 columns" id="logo">
-                    <img src="assets/logo.png">
-                    <div class="small-6 columns" id="nav">
-                        <ul>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Our Work</a></li>
-                            <li><a href="">About</a></li>
-                            <li><a href="">Services</a></li>
-                            <li><a href="">Blog</a></li>
-                            <li><a href="">Get in Touch</a></li>
-                        </ul>
-                        <div class="small-3 columns" id="icons">
-                            <ul>
-                                <li> <i class="fa fa-facebook"></i></li>
+                <div class="small-4 large-4 columns" id="logo">
+                    <img src="assets/logo.png"></div>
+                <div class="small-4 large-4 columns" id="nav">
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Our Work</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Get in Touch</a></li>
+                    </ul>
+                </div>
+                <div class="small-4 large-4 columns" id="icons">
+                    <ul>
+                        <li> <i class="fa fa-facebook"></i></li>
 
-                                <li> <i class="fa fa-twitter"></i></li>
-                                <li><i class="fa fa-google-plus"></i>
-                                </li>
-                                <li><i class="fa fa-pinterest"></i>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+                        <li> <i class="fa fa-twitter"></i></li>
+                        <li><i class="fa fa-google-plus"></i>
+                        </li>
+                        <li><i class="fa fa-pinterest"></i>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="small-6  columns">
+            <div class="small-8 small-centered large-8 large-centered columns">
                 <div id="title">
                     <h1>WE BUILD WEBSITES AND <br>APPS THAT PEOPLE LOVE</h1>
                     <p>Full suite of internet services in the areas of website development,web-based
@@ -146,6 +145,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
