--- a/mine.html
+++ b/mine.html
@@ -36,6 +36,18 @@
                 </ul>
             </div>
         </div>
+        <div class="row">
+            <div class="build">
+                <div class="small-8 small-centered large-8 large-centered columns">
+                    <div id="title">
+                        <h1>WE BUILD WEBSITES AND <br>APPS THAT PEOPLE LOVE</h1>
+                        <p>Full suite of internet services in the areas of website development,web-based
+                            <br> enterprise solutions, corporate identity and advertisement.</p>
+                        <button type="button" value="Explore more">EXPLORE MORE</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
