--- a/mine.html
+++ b/mine.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="row container small-12 large-12 columns">
-        <div class="row">
+        <div class="row header">
             <div class="small-4 large-4 columns" id="logo">
                 <img src="assets/logo.png"></div>
             <div class="small-4 large-4 columns" id="nav">
@@ -35,15 +35,15 @@
                     </li>
                 </ul>
             </div>
-        </div>
-        <div class="row">
-            <div class="build">
-                <div class="small-8 small-centered large-8 large-centered columns">
-                    <div id="title">
-                        <h1>WE BUILD WEBSITES AND <br>APPS THAT PEOPLE LOVE</h1>
-                        <p>Full suite of internet services in the areas of website development,web-based
-                            <br> enterprise solutions, corporate identity and advertisement.</p>
-                        <button type="button" value="Explore more">EXPLORE MORE</button>
+            <div class="row">
+                <div class="build">
+                    <div class="small-8 small-centered large-8 large-centered columns">
+                        <div id="title">
+                            <h1>WE BUILD WEBSITES AND <br>APPS THAT PEOPLE LOVE</h1>
+                            <p>Full suite of internet services in the areas of website development,web-based
+                                <br> enterprise solutions, corporate identity and advertisement.</p>
+                            <button type="button" value="Explore more">EXPLORE MORE</button>
+                        </div>
                     </div>
                 </div>
             </div>
