--- a/mine.html
+++ b/mine.html
@@ -47,6 +47,33 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="large-6 columns highlighted">
+                    <div class="row">
+                        <div class="<large-12 columns highlighted-text">
+                            <p>Current site section contains general information about
+                                <br>our latest projects. We are focusing on website and mobile
+                                <br> development, UI/UX and branding.</p>
+                            <br>
+                            <p id="head">HIGHLIGHTED
+                                <br> PROJECTS</p>
+                        </div>
+                    </div>
+                    <div class="row blank ">
+                        <div class="large-12 columns">
+                            <div class="<large-4 columns blank1"></div>
+                            <div class="<large-4  columns blank2"></div>
+                            <div class="<large-4 columns blank3"></div>
+                        </div>
+                        <div class="row">
+                            <div class="<large-12 columns"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="large-6 columns infinity">
+
+                </div>
+            </div>
         </div>
     </div>
 
