--- a/mine.html
+++ b/mine.html
@@ -69,6 +69,12 @@
                             <div class="<large-12 columns"></div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div id="discover">
+                            <button id="button" type="button" value="discover">DISCOVER MORE</button>
+                            <p>* Site contains recent projects. Detailed portfolio available upon request.</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="large-6 columns infinity">
 
