--- a/mine.html
+++ b/mine.html
@@ -48,36 +48,45 @@
                 </div>
             </div>
             <div class="row">
-                <div class="large-6 columns highlighted">
-                    <div class="row">
-                        <div class="<large-12 columns highlighted-text">
-                            <p>Current site section contains general information about
-                                <br>our latest projects. We are focusing on website and mobile
-                                <br> development, UI/UX and branding.</p>
-                            <br>
-                            <p id="head">HIGHLIGHTED
-                                <br> PROJECTS</p>
+                <div class="large-12 columns">
+                    <div class="large-6 columns highlighted">
+                        <div class="row">
+                            <div class="<large-12 columns highlighted-text">
+                                <p>Current site section contains general information about
+                                    <br>our latest projects. We are focusing on website and mobile
+                                    <br> development, UI/UX and branding.</p>
+                                <br>
+                                <p id="head">HIGHLIGHTED
+                                    <br> PROJECTS</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row blank ">
-                        <div class="large-12 columns">
-                            <div class="<large-4 columns blank1"></div>
-                            <div class="<large-4  columns blank2"></div>
-                            <div class="<large-4 columns blank3"></div>
+                        <div class="row blank ">
+                            <div class="large-12 columns">
+                                <div class="<large-4 columns blank1"></div>
+                                <div class="<large-4  columns blank2"></div>
+                                <div class="<large-4 columns blank3"></div>
+                            </div>
+                            <div class="row">
+                                <div class="<large-12 columns"></div>
+                            </div>
                         </div>
                         <div class="row">
-                            <div class="<large-12 columns"></div>
+                            <div id="discover">
+                                <button id="button" type="button" value="discover">DISCOVER MORE</button>
+                                <p>* Site contains recent projects. Detailed portfolio available upon request.</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div id="discover">
-                            <button id="button" type="button" value="discover">DISCOVER MORE</button>
-                            <p>* Site contains recent projects. Detailed portfolio available upon request.</p>
+                    <div class="large-6 columns infinity">
+                        <div id="text">
+                            <h2>FEATURED</h2>
+                            <h1>I N F I N I T Y   S P A C E S </h1>
+                            <p>
+                                Our self-initiated project.
+                                <br> Infinity is an abstract concept describing something without any limiit and is relevant in a number of fields.
+                            </p>
                         </div>
                     </div>
-                </div>
-                <div class="large-6 columns infinity">
-
                 </div>
             </div>
         </div>
