added all files

--- a/mine.html
+++ b/mine.html
@@ -61,9 +61,9 @@
                     </div>
                     <div class="row blank ">
 
-                        <div class="<large-4 columns blank1"></div>
-                        <div class="<large-4  columns blank2"></div>
-                        <div class="<large-4 columns blank3"></div>
+                        <div class="large-4 columns blank1"></div>
+                        <div class="large-4  columns blank2"></div>
+                        <div class="large-4 columns blank3"></div>
                     </div>
 
                     <div class="row">
@@ -77,12 +77,14 @@
                 </div>
                 <div class="large-6 columns infinity">
                     <div id="text">
-                        <h2>FEATURED</h2>
-                        <h1>I N F I N I T Y   S P A C E S </h1>
-                        <p>
-                            Our self-initiated project.
-                            <br> Infinity is an abstract concept describing something without any limiit and is relevant in a number of fields.
-                        </p>
+<!--
+                <h2>FEATURED</h2>
+<h1>I N F I N I T Y   S P A C E S </h1>
+<p>
+    Our self-initiated project.
+    <br> Infinity is an abstract concept describing something without any limiit and is relevant in a number of fields.
+</p>
+-->
                     </div>
                 </div>
 
