--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                   Current site section contains general information about our latest projects. We are focusing on website and mobile development, UI/UX and branding.<br>
             <h1>HIGHLIGHTED PROJECTS</h1>
                   <div class="large-6 columns black"><br>
-                      <div class="large-3 columns"></div>
-                      <div class="large-3 columns"></div>
+                      <div class="row"></div>
+                      <div class="row"></div>
                   </div>
               </div>
               <div class="large-6 columns right">
