--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         </div>
     </div>
       <div class="expanded row row1">
-          <div class="large-12 columns">
-              <div class="large-6 columns left">
+          <div class="large-12 expanded columns">
+              <div class="large-6 columns expanded left">
                   Current site section contains general information about our latest projects. We are focusing on website and mobile development, UI/UX and branding.<br>
             <h1>HIGHLIGHTED PROJECTS</h1>
-                  <div class="large-6 columns black"><br>
+                  <div class="large-12 columns expanded black"><br>
                       <div class="row"></div>
                       <div class="row"></div>
                   </div>
