--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
     </div>
       <div class="expanded row row1">
-          <div class="large-12 expanded columns">
-              <div class="large-6 columns expanded left">
+
+              <div class="large-6 columns left">
                   Current site section contains general information about our latest projects. We are focusing on website and mobile development, UI/UX and branding.<br>
             <h1>HIGHLIGHTED PROJECTS</h1>
                   <div class="large-12 columns expanded black"><br>
@@ -41,11 +41,14 @@
                   </div>
               </div>
               <div class="large-6 columns right">
-                  Current site section contains general information about our latest projects. We are focusing on website and mobile development, UI/UX and branding.
+                 <h2>FEATURED</h2><br>
+                  <h1>INFINITY SPACES</h1><br>
+                  Our self-initiated project.<br>
+                  Infinity & is an abstract concept describing something without any limit and is relevant in a number of fields
               </div>
 
           </div>
-      </div>
+
 
 
     <script src="js/vendor/jquery.js"></script>
