Discover More button added

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
                   Current site section contains general information about our latest projects. We are focusing on website and mobile development, UI/UX and branding.<br>
             <h1>HIGHLIGHTED PROJECTS</h1>
                   <div class="large-12 columns expanded black"><br>
-                      <div class="row"></div>
+                      <div class="row">
+</div>
                       <div class="row"></div>
                   </div>
+                  <div class="large-12 columns"><a href="#features" class="button">Discover More</a></div>
               </div>
               <div class="large-6 columns right">
                  <h2>FEATURED</h2><br>
