history content added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 </div>
                       <div class="row"></div>
                   </div>
-                  <div class="large-12 columns"><a href="#features" class="button">Discover More</a></div>
+                  <div class="large-12 columns"><a href="#features" class="button">Discover More</a><br>
+                      *Site contains some recent projects. Detailes portfolio available upon request
+                  </div>
               </div>
               <div class="large-6 columns right">
                  <h2>FEATURED</h2><br>
@@ -50,6 +52,21 @@
               </div>
 
           </div>
+      <div class="expanded row">
+          <div class="large-6 columns">
+              <h1>OUR HISTORY</h1><br>
+              SAGE- is the flexible multi-concept portfolio based on WordPress Built by designers, for designers, creative agencies and studios
+              <p>Multi-purpose appreciate it's. Anti mega industry multi-purspose are brighter. Also longer succesful classic deal extra vibrant first exclusive. And spacious ultimate secure lasting clinically flip gigantic every outside
+              </p>
+              <p>
+                  Genuine less effective stimulates efferverscent jumbo mouthwatering hello class rich however expensive. Easy mothers can't try finest gentle spring admire dry. Quenches valuable tangy buy will your escape grown millions on the pop-top. Way included sharpest aroma recommended all can pleasure. However all-over hurry hit than how. Luscious magically colossal whopping it's full-bodied lasting splash don't get more. Sure zippy on flavored luscious spring only
+                  <p>
+                  Racy challenge listen better go light tasting aromatic thick. Think touch spring now jumbo secret deserve thank-you seeing out. Supreme luscious agree monster economicalmakes delivers tummy absorbent incredible can quick. Clean shine product shine product sweet choosy need golden
+              </p>
+              </p>
+          </div>
+          <div class="large-6 columns"></div>
+      </div>
 
 
 
