sage logo added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
               </p>
               </p>
           </div>
-          <div class="large-6 columns"></div>
+          <div class="large-6 columns">
+              <img src="assets/sageBlackBigLogo.png">
+      </div>
       </div>
 
 
