identity identity to the added pic

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </p>
               </p>
           </div>
-          <div class="large-6 columns">
+          <div class="large-6 columns middlerow">
               <img src="assets/sageBlackBigLogo.png">
       </div>
       </div>
