column 2180 of finished products

--- a/index.html
+++ b/index.html
@@ -69,7 +69,17 @@
               <img src="assets/sageBlackBigLogo.png">
       </div>
       </div>
-
+<div class="row">
+    <img src="assets/2180.png"><br>
+    <h1>2180</h1><br>
+    finished products
+    <div class="large-4 colums">
+    </div>
+    <div class="large-4 colums">
+    </div>
+    <div class="large-4 colums">
+    </div>
+    </div>
 
 
     <script src="js/vendor/jquery.js"></script>
