mobile  screens column added

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
     <h1>2180</h1><br>
     finished products
     <div class="large-4 colums">
+        <img src="assets/105870.png"><br>
+        <h1>105870</h1><br>
+        Mobile Screens Designed
     </div>
     <div class="large-4 colums">
     </div>
