mail sent column

--- a/index.html
+++ b/index.html
@@ -70,17 +70,22 @@
       </div>
       </div>
 <div class="row">
-    <img src="assets/2180.png"><br>
+
+    <div class="large-4 columns">
+         <img src="assets/2180.png"><br>
     <h1>2180</h1><br>
     finished products
-    <div class="large-4 colums">
+
+    </div>
+    <div class="large-4 columns">
         <img src="assets/105870.png"><br>
         <h1>105870</h1><br>
         Mobile Screens Designed
     </div>
-    <div class="large-4 colums">
-    </div>
-    <div class="large-4 colums">
+    <div class="large-4 columns">
+        <img src="assets/mail.png"><br>
+        <h1>345850</h1><br>
+        Mail Sent
     </div>
     </div>
 
