--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
         Mail Sent
     </div>
     </div>
+    <div class="row">
+        Services
+    </div>
 
 
     <script src="js/vendor/jquery.js"></script>
