services font and three columns added for services row

--- a/index.html
+++ b/index.html
@@ -89,9 +89,15 @@
     </div>
     </div>
     <div class="row">
-        Services
+        <h1>Services</h1>
     </div>
-
+<div class="row">
+      <div class="large-4 columns">
+    </div>
+    <div class="large-4 columns">
+    </div
+        <div class="large-4 columns">
+    </div
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
