ADDED IMAGES IN SERVICES ROW

--- a/index.html
+++ b/index.html
@@ -93,10 +93,16 @@
     </div>
 <div class="row">
       <div class="large-4 columns">
+          <img src="assets/exclusive.png"><br>
+          <h3>EXCLUSIVE AND FLEXIBLE THEME</h3>
     </div>
     <div class="large-4 columns">
+        <img src="assets/materialnretinadesign.png">
+        <h3>MATERIAL AND RETINA DESIGN</h3><br>
     </div
         <div class="large-4 columns">
+        <img src="assets/friendlycustomer.png"><br>
+        <h3>FRIENDLY CUSTOMER SUPPORT</h3>
     </div
 
     <script src="js/vendor/jquery.js"></script>
