--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
         <div class="large-4 columns">
         <img src="assets/friendlycustomer.png"><br>
         <h4>FRIENDLY CUSTOMER SUPPORT</h4>
-    </div
+    </div>
+        <div class="row">
+            <div class="large-4 columns"></div>
+             <div class="large-4 columns"></div>
+            <div class="large-4 columns"></div>
+    </div>
 
 
     <script src="js/vendor/jquery.js"></script>
