ENGAGING UI/UX COLUMN ADDED

--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
         <h4>FRIENDLY CUSTOMER SUPPORT</h4>
     </div>
         <div class="row">
-            <div class="large-4 columns"></div>
+            <div class="large-4 columns">
+                <img src="assets/engaginguiux.png"><br>
+                    <h4>ENGAGING UI/UX DESIGNS</h4>
+            </div>
              <div class="large-4 columns"></div>
             <div class="large-4 columns"></div>
     </div>
