--- a/index.html
+++ b/index.html
@@ -109,8 +109,14 @@
                 <img src="assets/engaginguiux.png"><br>
                     <h4>ENGAGING UI/UX DESIGNS</h4>
             </div>
-             <div class="large-4 columns"></div>
-            <div class="large-4 columns"></div>
+             <div class="large-4 columns">
+                 <img src="assets/handcrafted.png"><br>
+                 <h4>HAND-CRAFTED WITH LOVE</h4>
+            </div>
+            <div class="large-4 columns">
+                <img src="assets/fullyresponsive.png"><br>
+
+            </div>
     </div>
 
 
