FULLY RESPONSIVE AND FLEXIBLE DESING COLUMN ADDED

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
             <div class="large-4 columns">
                 <img src="assets/fullyresponsive.png"><br>
-
+                    <h4>FULLY RESPONSIVE AND FLEXIBLE DESIGN</h4>
             </div>
     </div>
 
