action area row added

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                     <h4>FULLY RESPONSIVE AND FLEXIBLE DESIGN</h4>
             </div>
     </div>
+    <div class="expanded row grey">
+
+    </div>
 
 
     <script src="js/vendor/jquery.js"></script>
