--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@
             </div>
     </div>
     <div class="expanded row grey">
-
+<h1>THIS IS A CALL TO ACTION AREA</h1>< <br>
+        You can use current block to place some important information<br>
+        <div class="bold"><b>
+            GET IN TOUCH NOW
+            </b></div>
     </div>
 
 
