--- a/index.html
+++ b/index.html
@@ -125,7 +125,11 @@
             GET IN TOUCH NOW
             </b></div>
     </div>
-
+<div class="row journal">
+    <div class="large-4 columns journ"><br></div>
+     <div class="large-4 columns journ"><br></div>
+     <div class="large-4 columns journ"><br></div>
+    </div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
