explore more button changed to correct one

--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
     </div>
     <div class="row content">
     <div class="large-4 columns ">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-        <a class="expanded button" href="#">EXPLORE MORE</a>
+          <button class="secondary hollow button" href="#">EXPLORE MORE</button>
         </div>
      <div class="large-4 columns">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-        <a class="expanded button" href="#">EXPLORE MORE</a>
+         <button class="secondary hollow button" href="#">EXPLORE MORE</button>
         </div>
      <div class="large-4 columns">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-        <a class="expanded button" href="#">EXPLORE MORE</a>
+        <button class="secondary hollow button" href="#">EXPLORE MORE</button>
         </div>
     </div>
 
