--- a/index.html
+++ b/index.html
@@ -126,14 +126,13 @@
             </b></div>
     </div>
 <div class="row journal">
-    <div class="large-4 columns journ"><br></div>
+    <div class="large-4 columns journ"><br>
+    </div>
      <div class="large-4 columns journ"><br></div>
      <div class="large-4 columns journ"><br></div>
     </div>
     <div class="row content">
-    <div class="large-4 columns ">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-          <button class="secondary hollow button" href="#">EXPLORE MORE</button>
-        </div>
+
      <div class="large-4 columns">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
          <button class="secondary hollow button" href="#">EXPLORE MORE</button>
         </div>
@@ -141,6 +140,7 @@
         <button class="secondary hollow button" href="#">EXPLORE MORE</button>
         </div>
     </div>
+    <div class="row show"></div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
