alignment of show more content to center

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <button class="secondary hollow button" href="#">EXPLORE MORE</button>
         </div>
     </div>
-    <div class="row show"></div>
+    <div class="row show">SHOW MORE ARTICLES </div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
