content added to the blackrow

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
     </div>
     <div class="row show">SHOW MORE ARTICLES </div>
     <div class="row blackrow">
+        "very much impressed with the quality of this them and the great support from idealUI
     </div>
 
 
