align conent to center in an expanded row

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
     </div>
     <div class="row show">SHOW MORE ARTICLES </div>
-    <div class="row blackrow">
+    <div class="expanded row blackrow">
         "very much impressed with the quality of this them and the great support from idealUI
     </div>
 
