--- a/index.html
+++ b/index.html
@@ -146,6 +146,15 @@
     <div class="row show">SHOW MORE ARTICLES </div>
     <div class="expanded row blackrow">
         "very much impressed with the quality of this them and the great support from idealUI
+        <div class="large-8 columns">
+
+            <img src="assets/testimoniallogos/connector.png">
+            <img src="assets/testimoniallogos/fr.png">
+            <img src="assets/testimoniallogos/udacity.png">
+            <img src="assets/testimoniallogos/fr.png">
+            <img src="assets/testimoniallogos/sage.png">
+             <img src="assets/testimoniallogos/ui.png">
+        </div>
     </div>
 
 
