new row and various subdivisions done

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="row show">SHOW MORE ARTICLES </div>
     <div class="expanded row blackrow">
         "very much impressed with the quality of this them and the great support from idealUI
-        <div class="large-8 columns">
+        <div class="large-12 columns">
 
             <img src="assets/testimoniallogos/connector.png">
             <img src="assets/testimoniallogos/fr.png">
@@ -156,7 +156,27 @@
              <img src="assets/testimoniallogos/ui.png">
         </div>
     </div>
+<div class="row footer">
+    <div class="large-6 columns">
+        <h1>STAY CONNECTED</h1>
+        Join us on our social networks for all all latest updates, product/service announcements and many more
+    </div>
+     <div class="large-6 columns">
+         <div class="row">
+             <div class="large-3 colums greyfooter">
+             </div>
+              <div class="large-3 colums blakfooter">
+             </div>
+         </div>
+         <div class="row">
+              <div class="large-3 colums greyfooter">
+             </div>
+              <div class="large-3 colums blakfooter">
+             </div>
+         </div>
+    </div>
 
+</div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
