--- a/index.html
+++ b/index.html
@@ -163,15 +163,17 @@
     </div>
      <div class="large-6 columns">
          <div class="row">
-             <div class="large-3 colums greyfooter">
+             <div class="large-6 columns greyfooter">
+                 facebook
              </div>
-              <div class="large-3 colums blakfooter">
+              <div class="large-6 columns blakfooter">
+                  twitter
              </div>
-         </div>
-         <div class="row">
-              <div class="large-3 colums greyfooter">
+
+         <div class="large-6 columns blakfooter">
+                  google+
              </div>
-              <div class="large-3 colums blakfooter">
+              <div class="large-6 columns greyfooter">
              </div>
          </div>
     </div>
