social icons added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
                   <li><a href="#"></a>Get in Touch</li>
               </ul>
           </div>
-          <div class="large-1 columns">social</div>
+          <div class="large-1 columns"><div class="row footer">
+
+         <div class="large-2 columns social">
+             <i class="fa fa-facebook" aria-hidden="true"></i>
+          </div>
+          <div class="large-2 columns social">
+              <i class="fa fa-google-plus" aria-hidden="true"></i></div>
+              <div class="large-2 columns social"><i class="fa fa-stack-overflow" aria-hidden="true"></i></div>
+               <div class="large-2 columns social"><i class="fa fa-youtube-play" aria-hidden="true"></i></div>
+               <div class="large-2 columns social"><i class="fa fa-twitter" aria-hidden="true"></i></div></div>
       </div>
         <div class="large-8 columns"><h1>WE BUILD WEBSITES AND APPS THAT PEOLE LOVE</h1><br>
             Full suite service in the ares of website development, web-based enterprise solutions, corporate ientity and advertisement.
