font awesome heading link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SAGE</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
   </head>
   <body>
     <div class="expanded row banner">
