uncessary row removeed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <div class="large-6 columns left">
                   Current site section contains general information about our latest projects. We are focusing on website and mobile development, UI/UX and branding.<br>
             <h1>HIGHLIGHTED PROJECTS</h1>
-                  <div class="large-12 columns expanded black"><br>
+                  <div class="large-12 columns"><br>
                       <div class="row">
 </div>
                       <div class="row"></div>
